1st section added to home page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body id="body">
  <!--Header start-->
@@ -34,8 +35,17 @@
       </nav>
    <!--Header end-->
   <!--main-body start-->
-    <div>
-      HHIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
+    <div class="main-container">
+      <div class="Body-section">
+        <div class="section1 section1-text lato-bold-italic">
+          <h2>We are Passionate Beauticians and Makeup Artists Based in Velapur.</h2><br/>
+          <p>Looking for the best beauty and spa services in town? Our team of experienced beauticians offers all the beauty services you’ve been waiting for.</p>
+          <button class="btn">Book Appoinment</button>
+        </div>
+        <div class="section1">
+          <img src="./img/home.jpg" class="im" />
+        </div>
+      </div>
     </div>
   <!--main-body end-->
    <!--footer start-->
