2nd section added to home page

--- a/index.html
+++ b/index.html
@@ -46,6 +46,48 @@
           <img src="./img/home.jpg" class="im" />
         </div>
       </div>
+
+      <p class="sedan-sc-regular section2-heading">Our Services</p>
+      <p class="lato-bold-italic section2-text">Whether it is simple threading, haircuts or a complete body massage, we serve you with all your beauty needs with the best products coupled with dedicated services on board.</p>
+      <div class="section2">
+        <div class="section2-img">
+          <div class="section2-sub">
+            <div><img src="./img/makeup.jpg" class="img"/></div>
+            <div class="lato-bold-italic" style="text-align: center; margin-top:10px">Makeup</div>
+          </div>
+          <div class="section2-sub">
+            <div><img src="./img/hair-cut.jpg" class="img"/></div>
+            <div class="lato-bold-italic" style="text-align: center;  margin-top:10px">Hair Cut</div>
+          </div>
+          <div class="section2-sub">
+            <div><img src="./img/hair-styling.jpg" class="img"/></div>
+            <div class="lato-bold-italic" style="text-align: center;  margin-top:10px">Hair Setting</div>
+          </div>
+          <div class="section2-sub">
+            <div> <img src="./img/hair-color.jpg" class="img"/></div>
+            <div class="lato-bold-italic " style="text-align: center;  margin-top:10px">Hair Color</div>
+          </div>
+        </div>
+        <div class="section2-img">
+          <div class="section2-sub">
+            <div><img src="./img/prewedding.jpg" class="img"/></div>
+            <div class="lato-bold-italic" style="text-align: center; margin-top:10px">Prewedding Makeup</div>
+          </div>
+          <div class="section2-sub">
+            <div><img src="./img/fashionmakeup.jpg" class="img"/></div>
+            <div class="lato-bold-italic" style="text-align: center;  margin-top:10px">Fashion Makeup</div>
+          </div>
+          <div class="section2-sub">
+            <div><img src="./img/skin treatment2.jpg" class="img skin-im"/></div>
+            <div class="lato-bold-italic" style="text-align: center;  margin-top:10px">Skin Treatment</div>
+          </div>
+          <div class="section2-sub">
+            <div> <img src="./img/skin spa.jpg" class="img skin-im"/></div>
+            <div class="lato-bold-italic " style="text-align: center;  margin-top:10px">Spa</div>
+          </div>
+        </div>
+      </div>
+   
     </div>
   <!--main-body end-->
    <!--footer start-->
