1st section adjustment

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
    <!--Header end-->
   <!--main-body start-->
     <div class="main-container">
-      <div class="Body-section">
+      <div class="Body-section" style="background-color: #FFE5E6;">
         <div class="section1 section1-text lato-bold-italic">
           <h2>We are Passionate Beauticians and Makeup Artists Based in Velapur.</h2><br/>
           <p>Looking for the best beauty and spa services in town? Our team of experienced beauticians offers all the beauty services you’ve been waiting for.</p>
