3rd section added to home page

--- a/index.html
+++ b/index.html
@@ -87,6 +87,18 @@
           </div>
         </div>
       </div>
+
+      <div class="Body-section3" style="background-color: #FFE5E6;">
+        <div class="section3">
+          <img src="./img/home.jpg" class="im" />
+        </div>
+        <div class="section3 section3-text lato-bold-italic">
+          <h1>About Me</h1><br/>
+          <p>If you are looking for the best beauty services ranging from threading, facial, haircuts and more, you can walk in here. Graduating from the best beauty schools, and working with top beauty professionals we have mastered the skills of delivering the best beauty and spa services in town.
+            <br/><br/>Over the years we have served hundreds of happy clients who trust us for their look for important occasions like weddings, corporate parties, concerts, events and more. So, whether it is a quick touch-up or detailed beauty therapies, we are here to help you.</p>
+          <button class="btn">Book Appoinment</button>
+        </div>
+      </div>
    
     </div>
   <!--main-body end-->
