4rth section added to home page

--- a/index.html
+++ b/index.html
@@ -99,6 +99,21 @@
           <button class="btn">Book Appoinment</button>
         </div>
       </div>
+
+      <p class="sedan-sc-regular section2-heading">Our Work</p>
+      <p class="lato-bold-italic section2-text">Here’s a quick look at the beauty transformations that we have worked on. Whether it is a temporary makeup or a complete makeover, you can trust us.</p>
+      <div class="section4">
+        <div class="section4-sub">
+          <div class="section4-d"><img src="./img/Makeup1.jpeg" class="img4"/></div>
+          <div class="section4-d"><img src="./img/Makeup3.jpeg" class="img4"/></div>
+          <div class="section4-d"><img src="./img/Makeup2.jpeg" class="img4"/></div>
+        </div>
+        <div class="section4-sub">
+          <div class="section4-d"><img src="./img/Makeup5.jpeg" class="img4"/></div>
+          <div class="section4-d"><img src="./img/Makeup4.jpeg" class="img4"/></div>
+          <div class="section4-d"><img src="./img/me-1.jpeg" class="img4"/></div>
+        </div>
+      </div>
    
     </div>
   <!--main-body end-->
