created Appoinment page & added it to home

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="section1 section1-text lato-bold-italic">
           <h2>We are Passionate Beauticians and Makeup Artists Based in Velapur.</h2><br/>
           <p>Looking for the best beauty and spa services in town? Our team of experienced beauticians offers all the beauty services you’ve been waiting for.</p>
-          <button class="btn">Book Appoinment</button>
+          <a href="./pages/book_appointment.html" class="appoinment-link" target="_blank""><button class="btn">Book Appoinment</button></a>
         </div>
         <div class="section1">
           <img src="./img/home.jpg" class="im" />
@@ -96,7 +96,7 @@
           <h1>About Me</h1><br/>
           <p>If you are looking for the best beauty services ranging from threading, facial, haircuts and more, you can walk in here. Graduating from the best beauty schools, and working with top beauty professionals we have mastered the skills of delivering the best beauty and spa services in town.
             <br/><br/>Over the years we have served hundreds of happy clients who trust us for their look for important occasions like weddings, corporate parties, concerts, events and more. So, whether it is a quick touch-up or detailed beauty therapies, we are here to help you.</p>
-          <button class="btn">Book Appoinment</button>
+            <a href="./pages/book_appointment.html" class="appoinment-link" target="_blank""><button class="btn">Book Appoinment</button></a>
         </div>
       </div>
 
