home page image added

--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
     <div class="main-container">
       <div class="Body-section" style="background-color: #FFE5E6;">
         <div class="section1 section1-text lato-bold-italic">
+          <h1 class=" sedan-sc-regular" style="font-size: 42px;">Palavi Beauty Parlour🦢</h1><br/>
           <h2>We are Passionate Beauticians and Makeup Artists Based in Velapur.</h2><br/>
           <p>Looking for the best beauty and spa services in town? Our team of experienced beauticians offers all the beauty services you’ve been waiting for.</p>
-          <a href="./pages/book_appointment.html" class="appoinment-link" target="_blank""><button class="btn">Book Appoinment</button></a>
+          <a href="./pages/book_appointment.html" class="appoinment-link" target="_blank"><button class="btn">Book Appoinment</button></a>
         </div>
         <div class="section1">
-          <img src="./img/home.jpg" class="im" />
+          <img src="./img/Home img.jpeg" class="im" />
         </div>
       </div>
 
