div text color fixed appoinmet page

--- a/pages/book_appointment.html
+++ b/pages/book_appointment.html
@@ -21,6 +21,7 @@
             background-color: #FFE5E6;
             padding: 20px 40px;
             margin-bottom: 40px;
+            color: black;
         }
         #bookBtn{
             margin: 35px 68px;
