js for image applied for all service images

--- a/index.html
+++ b/index.html
@@ -59,33 +59,47 @@
             <div class="lato-bold-italic" style="text-align: center; margin-top:10px">Makeup</div>
           </div>
           <div class="section2-sub">
-            <div><img src="./img/hair-cut.jpg" class="img"/></div>
+            <div><img src="./img/hair-cut.jpg" class="img" onclick="show('image-js1')"/>
+              <div id="image-js1"><img src="./img/hair-cut.jpg" /></div>
+            </div>
             <div class="lato-bold-italic" style="text-align: center;  margin-top:10px">Hair Cut</div>
           </div>
           <div class="section2-sub">
-            <div><img src="./img/hair-styling.jpg" class="img"/></div>
+            <div><img src="./img/hair-styling.jpg" class="img" onclick="show('image-js2')"/>
+              <div id="image-js2"><img src="./img/hair-styling.jpg" /></div>
+            </div>
             <div class="lato-bold-italic" style="text-align: center;  margin-top:10px">Hair Setting</div>
           </div>
           <div class="section2-sub">
-            <div> <img src="./img/hair-color.jpg" class="img"/></div>
+            <div> <img src="./img/hair-color.jpg" class="img" onclick="show('image-js3')"/>
+              <div id="image-js3"><img src="./img/hair-color.jpg" /></div>
+            </div>
             <div class="lato-bold-italic " style="text-align: center;  margin-top:10px">Hair Color</div>
           </div>
         </div>
         <div class="section2-img">
           <div class="section2-sub">
-            <div><img src="./img/prewedding.jpg" class="img"/></div>
+            <div><img src="./img/prewedding.jpg" class="img" onclick="show('image-js4')"/>
+              <div id="image-js4"><img src="./img/prewedding.jpg" /></div>
+            </div>
             <div class="lato-bold-italic" style="text-align: center; margin-top:10px">Prewedding Makeup</div>
           </div>
           <div class="section2-sub">
-            <div><img src="./img/fashionmakeup.jpg" class="img"/></div>
+            <div><img src="./img/fashionmakeup.jpg" class="img" onclick="show('image-js5')"/>
+              <div id="image-js5"><img src="./img/fashionmakeup.jpg" /></div>
+            </div>
             <div class="lato-bold-italic" style="text-align: center;  margin-top:10px">Fashion Makeup</div>
           </div>
           <div class="section2-sub">
-            <div><img src="./img/skin treatment2.jpg" class="img skin-im"/></div>
+            <div><img src="./img/skin treatment2.jpg" class="img skin-im"onclick="show('image-js6')"/>
+              <div id="image-js6"><img src="./img/skin treatment2.jpg" style="width: 550px;"/></div>
+            </div>
             <div class="lato-bold-italic" style="text-align: center;  margin-top:10px">Skin Treatment</div>
           </div>
           <div class="section2-sub">
-            <div> <img src="./img/skin spa.jpg" class="img skin-im"/></div>
+            <div> <img src="./img/skin spa.jpg" class="img skin-im" onclick="show('image-js7')"/>
+              <div id="image-js7"><img src="./img/skin spa.jpg" style="width: 550px;"/></div>
+            </div>
             <div class="lato-bold-italic " style="text-align: center;  margin-top:10px">Spa</div>
           </div>
         </div>
