small screen media query for home page

--- a/index.html
+++ b/index.html
@@ -56,25 +56,25 @@
             <div><img src="./img/makeup.jpg" class="img" onclick="show('image-js')"/>
               <div id="image-js"><img src="./img/makeup.jpg" /></div>
             </div>
-            <div class="lato-bold-italic" style="text-align: center; margin-top:10px">Makeup</div>
+            <div class="lato-bold-italic img-name" style="text-align: center; margin-top:10px">Makeup</div>
           </div>
           <div class="section2-sub">
             <div><img src="./img/hair-cut.jpg" class="img" onclick="show('image-js1')"/>
               <div id="image-js1"><img src="./img/hair-cut.jpg" /></div>
             </div>
-            <div class="lato-bold-italic" style="text-align: center;  margin-top:10px">Hair Cut</div>
+            <div class="lato-bold-italic img-name" style="text-align: center;  margin-top:10px">Hair Cut</div>
           </div>
           <div class="section2-sub">
             <div><img src="./img/hair-styling.jpg" class="img" onclick="show('image-js2')"/>
               <div id="image-js2"><img src="./img/hair-styling.jpg" /></div>
             </div>
-            <div class="lato-bold-italic" style="text-align: center;  margin-top:10px">Hair Setting</div>
+            <div class="lato-bold-italic img-name" style="text-align: center;  margin-top:10px">Hair Setting</div>
           </div>
           <div class="section2-sub">
             <div> <img src="./img/hair-color.jpg" class="img" onclick="show('image-js3')"/>
               <div id="image-js3"><img src="./img/hair-color.jpg" /></div>
             </div>
-            <div class="lato-bold-italic " style="text-align: center;  margin-top:10px">Hair Color</div>
+            <div class="lato-bold-italic img-name" style="text-align: center;  margin-top:10px">Hair Color</div>
           </div>
         </div>
         <div class="section2-img">
@@ -82,25 +82,25 @@
             <div><img src="./img/prewedding.jpg" class="img" onclick="show('image-js4')"/>
               <div id="image-js4"><img src="./img/prewedding.jpg" /></div>
             </div>
-            <div class="lato-bold-italic" style="text-align: center; margin-top:10px">Prewedding Makeup</div>
+            <div class="lato-bold-italic img-name" style="text-align: center; margin-top:10px">Prewedding Makeup</div>
           </div>
           <div class="section2-sub">
             <div><img src="./img/fashionmakeup.jpg" class="img" onclick="show('image-js5')"/>
               <div id="image-js5"><img src="./img/fashionmakeup.jpg" /></div>
             </div>
-            <div class="lato-bold-italic" style="text-align: center;  margin-top:10px">Fashion Makeup</div>
+            <div class="lato-bold-italic img-name" style="text-align: center;  margin-top:10px">Fashion Makeup</div>
           </div>
           <div class="section2-sub">
             <div><img src="./img/skin treatment2.jpg" class="img skin-im"onclick="show('image-js6')"/>
               <div id="image-js6"><img src="./img/skin treatment2.jpg" style="width: 550px;"/></div>
             </div>
-            <div class="lato-bold-italic" style="text-align: center;  margin-top:10px">Skin Treatment</div>
+            <div class="lato-bold-italic img-name" style="text-align: center;  margin-top:10px">Skin Treatment</div>
           </div>
           <div class="section2-sub">
             <div> <img src="./img/skin spa.jpg" class="img skin-im" onclick="show('image-js7')"/>
               <div id="image-js7"><img src="./img/skin spa.jpg" style="width: 550px;"/></div>
             </div>
-            <div class="lato-bold-italic " style="text-align: center;  margin-top:10px">Spa</div>
+            <div class="lato-bold-italic img-name" style="text-align: center;  margin-top:10px">Spa</div>
           </div>
         </div>
       </div>
@@ -119,7 +119,7 @@
           <h1>About Me</h1><br/>
           <p>If you are looking for the best beauty services ranging from threading, facial, haircuts and more, you can walk in here. Graduating from the best beauty schools, and working with top beauty professionals we have mastered the skills of delivering the best beauty and spa services in town.
             <br/><br/>Over the years we have served hundreds of happy clients who trust us for their look for important occasions like weddings, corporate parties, concerts, events and more. So, whether it is a quick touch-up or detailed beauty therapies, we are here to help you.</p>
-            <a href="./pages/book_appointment.html" class="appoinment-link" target="_blank""><button class="btn">Book Appoinment</button></a>
+            <a href="./pages/book_appointment.html" class="appoinment-link" target="_blank"><button class="btn">Book Appoinment</button></a>
         </div>
       </div>
 
@@ -128,24 +128,24 @@
       <div class="section4">
         <div class="section4-sub">
           <div class="section4-d"><img src="./img/Makeup1.jpeg" class="img4" onclick="showWork('work1')"/>
-            <div id="work1"><img src="./img/Makeup1.jpeg" style="width: 750px;"/></div>
+            <div id="work1"><img src="./img/Makeup1.jpeg" style="width: 550px;"/></div>
           </div>
           <div class="section4-d"><img src="./img/Makeup3.jpeg" class="img4" onclick="showWork('work2')"/>
-            <div id="work2"><img src="./img/Makeup3.jpeg" style="width: 750px;"/></div>
+            <div id="work2"><img src="./img/Makeup3.jpeg" style="width: 550px;"/></div>
           </div>
           <div class="section4-d"><img src="./img/Makeup2.jpeg" class="img4" onclick="showWork('work3')"/>
-            <div id="work3"><img src="./img/Makeup2.jpeg" style="width: 750px;"/></div>
+            <div id="work3"><img src="./img/Makeup2.jpeg" style="width: 550px;"/></div>
           </div>
         </div>
         <div class="section4-sub">
           <div class="section4-d"><img src="./img/Makeup5.jpeg" class="img4" onclick="showWork('work4')"/>
-            <div id="work4"><img src="./img/Makeup5.jpeg" style="width: 750px;"/></div>
+            <div id="work4"><img src="./img/Makeup5.jpeg" style="width: 550px;"/></div>
           </div>
           <div class="section4-d"><img src="./img/Makeup4.jpeg" class="img4" onclick="showWork('work5')"/>
-            <div id="work5"><img src="./img/Makeup4.jpeg" style="width: 750px;"/></div>
+            <div id="work5"><img src="./img/Makeup4.jpeg" style="width: 550px;"/></div>
           </div>
           <div class="section4-d"><img src="./img/me-1.jpeg" class="img4" onclick="showWork('work6')"/>
-            <div id="work6"><img src="./img/me-1.jpeg" style="width: 750px;"/></div>
+            <div id="work6"><img src="./img/me-1.jpeg" style="width: 550px;"/></div>
           </div>
         </div>
       </div>
@@ -203,5 +203,6 @@
  <!--footer end-->
   <script src="./js/script.js"></script>    
   <script src="./js/index.js"></script>    
+  <script src="./js/index2.js"></script>
 </body>
 </html>
