alert box to all  web pages

--- a/pages/services.html
+++ b/pages/services.html
@@ -132,7 +132,7 @@
     </footer>
     <!--footer end-->
   <script src="./../js/script.js"></script> 
-  <script src="./../js/about.js"></script> 
+    <script src="./../js/service.js"></script>
 </body>
 </html>
     
